--- a/SimpleTrader.WPF/Views/HomeView.xaml
+++ b/SimpleTrader.WPF/Views/HomeView.xaml
@@ -12,6 +12,6 @@
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <controls:MajorIndexListing Grid.Row="0" Margin="0 10" HorizontalAlignment="Center" DataContext="{Binding MajorIndexViewModel}" />
+        <controls:MajorIndexListing Grid.Row="0" Margin="0 10" HorizontalAlignment="Center" DataContext="{Binding MajorIndexListingViewModel}" />
     </Grid>
 </UserControl>
