--- a/SimpleTrader.WPF/App.xaml
+++ b/SimpleTrader.WPF/App.xaml
@@ -18,6 +18,9 @@
             <DataTemplate DataType="{x:Type viewModels:PortfolioViewModel}">
                 <views:PortfolioView />
             </DataTemplate>
+            <DataTemplate DataType="{x:Type viewModels:BuyViewModel}">
+                <views:BuyView />
+            </DataTemplate>
             
         </ResourceDictionary>
     </Application.Resources>
